add botão logout

--- a/tasks/templates/tasks-list.html
+++ b/tasks/templates/tasks-list.html
@@ -148,6 +148,9 @@
                     </div>
                 </div>
             </div>
+            <center>
+                <p>Deseja sair da sua conta?<a href="{% url 'logout' %}"> Sair.<a/></p>
+            </center>
         </div>
     </div>
 
