--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -18,7 +18,7 @@
             <img class="mb-4" src="{% static 'images/favicon.png' %}" alt="" width="72px" height="72px">
           </center>
 
-          <form class="login-form" method="post" autocomplete="off">
+          <form class="login-form" method="post">
             {% csrf_token %}
             <input type="email" id="username" name="username"class="form-control" placeholder="E-mail" required autofocos>
 
